k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "kafka-namespace"
  labels:
    name: "kafka-namespace"
