k8s/kafka-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "kafka-namespace"
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-main2
  name: kafka-main2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-main2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: kafka-main2
    spec:
      containers:
        - name: kafka-main2
          image: confluentinc/cp-kafka:latest
          ports:
            - containerPort: 29093
          resources: {}
      restartPolicy: Always
status: {}
