k8s/kafka-service2.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "kafka-namespace"
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-main2
  name: kafka-main2
spec:
  ports:
    - name: "29093"
      port: 29093
      targetPort: 29093
  selector:
    io.kompose.service: kafka-main2
status:
  loadBalancer: {}
