k8s/kafka-service3.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "kafka-namespace"
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-main3
  name: kafka-main3
spec:
  ports:
    - name: "29093"
      port: 29092
      targetPort: 29092
  selector:
    io.kompose.service: kafka-main3
status:
  loadBalancer: {}
