k8s/schema-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "kafka-namespace"
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: schema-registry-main
  name: schema-registry-main
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8081
  selector:
    io.kompose.service: schema-registry-main
status:
  loadBalancer: {}
