k8s/netpol-ingress-testh2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-ingress-testh2
  namespace: "kafka-namespace"
  labels:
    app: kafka
spec:
  podSelector:
    matchLabels:
      app: kafka
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: "testh2-namespace"
      podSelector:
        matchLabels:
          app: testh2
          app.kubernetes.io/name: testh2app
    ports:
      - protocol: TCP
        port: 29092
